# Scale-ICP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
input/: alfons_scaled_aligned_landmarks.xyz  baseAligned_landmarks.xyz  baseMesh.xyz  laura_aligned_1_landmarks.xyz  rt1.xyz
lib/: icp.cpp  icp.h  mesh.cpp  mesh.h
output/: alfons_aligned_landmarks.xyz  laura_aligned_landmarks.xyz
